setting/kubernetes/apigateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apigateway
  labels:
    app: apigateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apigateway
  template:
    metadata:
      labels:
        app: apigateway
    spec:
      containers:
      - name: apigateway
        image: apigateway
        ports:
        - containerPort: 8065
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: apigateway
  labels:
    app: apigateway
spec:
  ports:
  - port: 8065
    protocol: TCP
  selector:
    app: apigateway
  type: LoadBalancer
