setting/kubernetes/employee.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee
  labels:
    app: employee
spec:
  replicas: 1
  selector:
    matchLabels:
      app: employee
  template:
    metadata:
      labels:
        app: employee
    spec:
      containers:
      - name: employee
        image: msf-employee
        ports:
        - containerPort: 8011
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: employee
  labels:
    app: employee
spec:
  ports:
  - port: 8011
    protocol: TCP
  selector:
    app: employee
#  type: LoadBalancer
