setting/kubernetes/eureka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka
  labels:
    app: eureka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka
  template:
    metadata:
      labels:
        app: eureka
    spec:
      containers:
      - name: eureka
        image: eureka
        ports:
        - containerPort: 8761
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: eureka
  labels:
    app: eureka
spec:
  ports:
  - port: 8761
    protocol: TCP
  selector:
    app: eureka
  type: LoadBalancer
