setting/kubernetes/api-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: microservices.info
    http:
      paths:
      - path: /api-gateway
        backend:
          serviceName: apigateway
          servicePort: 8065
      - path: /emp
        backend:
          serviceName: employee
          servicePort: 8011
